--- a/Classwork/Activity-KNN.Rmd
+++ b/Classwork/Activity-KNN.Rmd
@@ -24,6 +24,8 @@ head(ins)
 
 ## Activity Break 1: KNN modeling
 
+#### Code from lecture
+
 Establish our model:
 
 ```{r}
@@ -40,6 +42,19 @@ knn_fit_1 <- knn_mod %>%
 
 knn_fit_1$fit %>% summary()
 ```
+
+#### Your task:
+
+Use cross validation to choose between a KNN model with 5 neighbors that uses only age versus one that uses both age and bmi.
+
+How do these models compare to the least-squares regression approach from Tuesday?
+
+How do these models compare to a KNN model with 10 neighbors?
+
+## Activity Break 2:  Normalizing variables
+
+
+#### Code from lecture
 
 Recipe:
 
@@ -61,7 +76,6 @@ ins_fit <- ins_wflow %>% fit(ins)
 ins_fit %>% pull_workflow_fit()
 ```
 
-## Activity Break 2:  Normalizing variables
 
 Normalize workflow:
 
@@ -79,17 +93,24 @@ ins_wflow
 
 Fit:
 
-
 ```{r}
 ins_fit <- ins_wflow %>% fit(ins) 
 
 ins_fit %>% pull_workflow_fit()
 ```
 
+#### Your task: 
+
+Make a KNN model with K = 5, using age, bmi, smoker, and sex
+Compare the model with non-normalized variables to one with normalized variables. Which is better?
+
+
+
 ## Activity Break 3:  Tuning
 
-Tuning:
+#### Code from lecture
 
+Tuning:
 
 ```{r}
 knn_mod_tune <- nearest_neighbor(neighbors = tune()) %>%
@@ -112,10 +133,8 @@ ins_wflow <- workflow() %>%
   add_model(knn_mod_tune)
 ```
 
-
 ```{r}
 ins_cv <- vfold_cv(ins, v = 10)
-
 
 knn_grid_search <-
   tune_grid(
@@ -124,7 +143,6 @@ knn_grid_search <-
     grid = k_grid
   )
 ```
-
 
 ```{r}
 knn_grid_search %>% collect_metrics()
@@ -137,7 +155,6 @@ knn_grid_search %>%
   geom_line()
 ```
 
-
 ```{r}
 knn_grid_search %>% 
   collect_metrics() %>%
@@ -145,13 +162,7 @@ knn_grid_search %>%
   slice_min(mean)
 ```
 
----
+#### Your task:  
 
-class: center, middle, inverse
-
-# Try it!
-
-## Open `Activity-KNN-r.Rmd` again
-## Decide on a best final KNN model to predict insurance charges
-## Plot the residuals from this model
+Find the best KNN model
 
